# compost

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.server  Dockerfile.web  Makefile  README.md  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
crypto/: Cargo.toml
crypto/src/: lib.rs
deployment/: manifest.yaml  traefik.yaml
server/: Cargo.toml
server/src/: error.rs  listener.rs  main.rs  manager.rs  tls.rs  utils.rs
server/src/api/: auth.rs  mod.rs
server/src/smtp/: mod.rs  server.rs  session.rs
tools/: .gitignore  generate_self_signed_cert.sh  populate.sh
web/: index.html  nginx.conf  package.json  vite.config.ts
web/public/: robots.txt
web/src/: auth.tsx  keystore.ts  main.tsx  query.ts  util.tsx
web/src/components/: ConfirmDialog.tsx  EmailContent.tsx  EmailList.tsx  Header.tsx  Layout.tsx  MagicAvatar.tsx  Navigation.tsx  Toast.tsx  Toggles.tsx  useTitle.tsx
web/src/pages/: About.tsx  Email.tsx  ManageAuth.tsx  NotFound.tsx
