[package]
name = "compost_crypto"
version = "0.1.0"
authors = ["Tibor Djurica Potpara"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
elliptic-curve = { version = "0.13.8", features = ["pkcs8", "sec1"] }
getrandom = { version = "0.2", features = ["js"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
rand_core = "0.6.4"
hkdf = "0.12.4"
sha2 = "0.10.8"
aes-gcm = "0.10.3"
pbkdf2 = { version = "0.12.2", features = ["sha2"] }
rand_chacha = { version = "0.3.1", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"
