[package]
name = "compost_server"
version = "0.1.0"
authors = ["Tibor Djurica Potpara"]
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
compost_crypto = { path = "../crypto" }
rustls = "0.23.13"
rustls-pemfile = "2.1.3"
smtp-proto = "0.1.5"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
serde = { version = "1", features = ["derive"] }
mail-builder = "0.3.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = { version = "0.7.7", features = ["tracing"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rust-s3 = { version = "0.35.1", default-features = false, features = [
    "tokio-rustls-tls",
] }
thiserror = "1.0.64"
hickory-resolver = { version = "0.24.1", features = [
    "dns-over-rustls",
    "dnssec-ring",
] }
elliptic-curve = { version = "0.13.8", features = ["pkcs8", "sec1"] }
p256 = "0.13.2"
rand_core = "0.6.4"
hkdf = "0.12.4"
sha2 = "0.10.8"
base64 = "0.22.1"
parking_lot = "0.12.3"
moka = { version = "0.12.8", features = ["sync"] }
rand = "0.8.5"
time = { version = "0.3.36", features = ["formatting"] }
serde_json = "1.0.128"
mail-parser = { version = "0.9.4", features = ["serde_support"] }
async-trait = "0.1.83"
http = "0.2.12"
proxy-header = { version = "0.1.2", features = ["tokio"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
arc-swap = "1.7.1"
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
metrics = "0.23.0"
axum-prometheus = { version = "0.7.0", default-features = false }
tokio-stream = "0.1.16"
futures = "0.3.30"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
